Fix main right margin and footer word-wrap

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ header p {
 
 main {
  grid-area: B;
- margin: 0 1rem 1rem 0;
+ margin: 0 0rem 1rem 0;
  padding-top: 1rem;
 }
 
@@ -342,6 +342,7 @@ footer {
  order: 3;
  margin-bottom: 2rem;
  font-size: 1.5rem;
+ word-wrap: break-word;
 }
 
 footer i {
